--- a/app/index.html
+++ b/app/index.html
@@ -17,14 +17,16 @@
 <header>
     <nav class="navbar navbar-fixed-top navbar-dark bg-faded success-color">
         <a class="navbar-brand pull-xs-right pull-sm-right pull-md-right pull-lg-right pull-xl-right" href="#">نمازِ من</a>
-        <span class="navbar-brand sub-brand pull-xs-left pull-sm-left pull-md-left pull-lg-left pull-xl-left">سایتی برای همه‌ی دوستداران نماز</span>
+        <span class="navbar-brand sub-brand pull-xs-left pull-sm-left pull-md-left pull-lg-left pull-xl-left">سایتی برای همه‌ی دوست‌داران نماز</span>
     </nav>
 </header>
 <div class="page container-fluid">
     <div id="news" class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <div class="card">
+            <div class="card"
+                 data-annoucement=""
+            >
                 <div class="card-block">
                     <a class="btn btn-success-outline waves-effect"><i class="fa fa-ellipsis-h"></i></a>
                     <p class="card-text">
@@ -32,7 +34,9 @@
                     </p>
                 </div>
             </div>
-            <div class="card older">
+            <div class="card older"
+                data-annoucement="http://center.namaz.ir/page.php?page=showarticles&cat=1&id=167&office=center"
+            >
                 <div class="card-block">
                     <a class="btn btn-success-outline waves-effect"><i class="fa fa-ellipsis-h"></i></a>
                     <p class="card-text">
@@ -40,7 +44,9 @@
                     </p>
                 </div>
             </div>
-            <div class="card older">
+            <div class="card older"
+                data-annoucement="http://center.namaz.ir/page.php?page=showarticles&cat=1&id=152&office=center"
+            >
                 <div class="card-block">
                     <a class="btn btn-success-outline waves-effect"><i class="fa fa-ellipsis-h"></i></a>
                     <p class="card-text">
@@ -48,7 +54,9 @@
                     </p>
                 </div>
             </div>
-            <div class="card older">
+            <div class="card older"
+                data-annoucement="http://center.namaz.ir/page.php?page=showarticles&cat=1&id=141&office=center"
+            >
                 <div class="card-block">
                     <a class="btn btn-success-outline waves-effect"><i class="fa fa-ellipsis-h"></i></a>
                     <p class="card-text">
